--- a/app/src/main/res/layout/activity_detalle_vehiculo.xml
+++ b/app/src/main/res/layout/activity_detalle_vehiculo.xml
@@ -56,9 +56,9 @@
 
         <ImageView
             android:id="@+id/imgFotoDetalle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images" />
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center_horizontal" />
 
         <TableLayout
             android:id="@+id/tblTablaDetalle"
