--- a/app/src/main/res/layout/activity_detalle_vehiculo.xml
+++ b/app/src/main/res/layout/activity_detalle_vehiculo.xml
@@ -133,7 +133,7 @@
                     android:textSize="18sp" />
             </TableRow>
 
-            <!--<TableRow
+            <TableRow
                 android:id="@+id/filaModelo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -153,7 +153,29 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:textSize="18sp" />
-            </TableRow>-->
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/filaUso"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lblTituloUso"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/uso"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/lblUsoDetalle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textSize="18sp" />
+            </TableRow>
 
         </TableLayout>
     </LinearLayout>
